--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@azure/ai-language-text": "^1.1.0",
     "@azure/ai-text-analytics": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "pm2": "^5.3.0",
